[metadata]
name = msdss-base-database
version = 0.0.5
author = Richard Wen
author_email = rrwen.dev@gmail.com
description = Base database for the Modular Spatial Decision Support Systems (MSDSS) framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rrwen/msdss-base-database
project_urls =
    Bug Tracker = https://github.com/rrwen/msdss-base-database/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir == src
packages = find:
install_requires = 
    msdss-base-dotenv
    pandas
    sqlalchemy
python_requires = >=3.8

[options.extras_require]
postgresql = psycopg2
mysql = pymsql
sqlite = pysqlite

[options.packages.find]
where = src